Handle Readme File